--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint-plugin-react": "^7.37.5",
     "firebase-tools": "^14.12.0",
     "turbo": "^2.5.5",
-    "typescript": "^5.4.5",
+    "typescript": "5.4.5",
     "vitest": "^3.2.4"
   },
   "pnpm": {
