--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -2,20 +2,29 @@
   "name": "functions",
   "version": "1.0.0",
   "private": true,
+  "type": "commonjs",
+  "engines": { "node": "20"  },
   "scripts": {
-    "type-check": "tsc -p tsconfig.json --noEmit",
-    "build": "tsc",
+
+    "build": "tsc -p tsconfig.json",
+    "dev": "tsc -w -p tsconfig.json",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "lint": "eslint .",
+    "type-check": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
-    "firebase-admin": "^12.7.0",
+    "firebase-admin": "^12.6.0",
     "firebase-functions": "^5.1.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
     "typescript": "^5"
   },
   "main": "lib/index.js"
