--- a/apps/functions/tsconfig.json
+++ b/apps/functions/tsconfig.json
@@ -1,7 +1,14 @@
 {
-  "extends": "../../packages/tsconfig/node20.json",
   "compilerOptions": {
-    "baseUrl": "."
+    "target": "ES2022",
+    "lib": ["ES2022"],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "rootDir": "src",
+    "outDir": "lib",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src"]
 }
