--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,16 @@
 {
-  "functions": { "source": "apps/functions" },
+  "functions": {
+    "source": "apps/functions",
+    "runtime": "nodejs20"
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
   "emulators": {
     "auth": { "port": 9099 },
-    "firestore": { "port": 8080 },
     "functions": { "port": 5001 },
-    "ui": { "enabled": true }
+    "firestore": { "port": 8080 },
+    "ui": { "enabled": true, "port": 4000 }
   }
 }
