--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "firebase-admin": "^12.7.0",
-    "firebase-functions": "^5.1.1"
+    "firebase-functions": "^5.1.1",
+    "pino": "^9.9.0"
   },
   "devDependencies": {
     "typescript": "^5"
