--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,13 +10,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@next-auth/firebase-adapter": "^2.0.1",
+    "@tanstack/react-query": "^5.85.3",
     "firebase": "^12.1.0",
     "firebase-admin": "^12.7.0",
+    "lru-cache": "^11.1.0",
     "next": "14.2.5",
     "next-auth": "^4.24.11",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0"
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
