--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "turbo": "^2.5.5",
     "typescript": "^5.4.5",
     "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "zod": "^3.25.76"
   }
 }
