--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,9 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest run --config vitest.config.ts",
+    "emu:start": "firebase emulators:start --import=./.seed --export-on-exit",
+    "emu:seed": "node scripts/seedUser.js",
+    "emu:test": "firebase emulators:exec --only auth,firestore \"vitest run --config vitest.config.emu.ts\"",
     "test:emu": "vitest run --config vitest.config.emu.ts"
   },
   "dependencies": {
@@ -32,7 +35,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-hook-.form": "^7.62.0",
+    "react-hook-form": "^7.62.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.0.17"
@@ -56,6 +59,9 @@
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "node-fetch": "^2.6.7",
+    "axios": "^1.7.2",
+    "firebase-admin": "^12.7.0"
   }
 }
