--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,10 @@
 {
   "emulators": {
-    "auth": { "port": 9199 },
-    "firestore": { "port": 8180 },
-    "ui": { "enabled": true, "port": 4100 }
+    "auth": { "host": "127.0.0.1", "port": 9099 },
+    "firestore": { "host": "127.0.0.1", "port": 8080 },
+    "ui": { "enabled": true, "host": "127.0.0.1", "port": 4000 },
+    "hub": { "host": "127.0.0.1", "port": 4400 },
+    "logging": { "host": "127.0.0.1", "port": 4500 }
   },
-  "firestore": {
-    "rules": "packages/database/firestore.rules",
-    "indexes": "packages/database/firestore.indexes.json"
-  }
+  "firestore": { "rules": "firestore.rules" }
 }
